vendor/feedvalidator/demo/testcases/opml/errors/badlyFormedEmail.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:  Badly formed email address
  Expect:       InvalidContact{element:ownerEmail}
-->

<opml version="1.1">
	<head>
		<title>Badly Formed Email</title>
		<ownerEmail>I prefer snailmail</ownerEmail>
		</head>
	<body>
		<outline text="Outline text"/>
		</body>
	</opml>
